--- a/src/main/resources/templates/galaxy/galaxy.html
+++ b/src/main/resources/templates/galaxy/galaxy.html
@@ -24,6 +24,16 @@
 </head>
 <body>
 <h1>Галактики</h1>
+<div>
+  <form method="get" action="/galaxy/filter/">
+    <input class="form-control" name="name" type="text" placeholder="Конкретный поиск" width="100">
+    <input class="btn btn-info" value="Найти" type="submit">
+  </form>
+  <form method="get" action="/galaxy/filtercontains/">
+    <input class="form-control" name="name" type="text" placeholder="Поиск по ключу" width="100">
+    <input class="btn btn-info" value="Найти" type="submit">
+  </form>
+</div>
 <a href="/galaxy/add" class="btn btn-success">Добавить галактику</a>
 <table class="table">
   <tr>
@@ -32,6 +42,7 @@
     <th>Радиус галактики</th>
     <th>Абсолютная звезда</th>
     <th>Количество звезд</th>
+    <th>Действие</th>
   </tr>
   <tr th:each="el : ${galaxy_list}">
     <td th:text="${el.name}"></td>
@@ -39,6 +50,9 @@
     <td th:text="${el.galaxy_radius}"></td>
     <td th:text="${el.absolute_star}"></td>
     <td th:text="${el.total_stars}"></td>
+    <td>
+      <a class="btn btn-primary" th:href="'/galaxy/detail/'+${el.UID}">Подробнее</a>
+    </td>
   </tr>
 </table>
 </body>
