--- a/src/main/resources/templates/star/star-add.html
+++ b/src/main/resources/templates/star/star-add.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head >
   <meta charset="UTF-8">
   <title>Добавление звезды</title>
@@ -24,15 +24,18 @@
 </head>
 <body>
 <h1>Добавить звезду</h1>
-<form method="post">
+<form method="post" th:object="${star}" th:action="${'/star/add'}">
   <label>Наименование звезды</label>
-  <input class="form-control" type="text" name="name">
+  <input th:field="*{name}" class="form-control" type="text" name="name">
+  <div th:if="${#fields.hasErrors('name')}" th:errors="*{name}" style="color: red"></div>
   <br>
   <label>Класс</label>
-  <input class="form-control" type="text" name="class">
+  <input th:field="*{class_star}" class="form-control" type="text" name="class">
+  <div th:if="${#fields.hasErrors('class_star')}" th:errors="*{class_star}" style="color: red"></div>
   <br>
   <label>Люмен</label>
-  <input class="form-control" type="number" name="lumen">
+  <input th:field="*{lumen}" class="form-control" type="number" name="lumen">
+  <div th:if="${#fields.hasErrors('lumen')}" th:errors="*{lumen}" style="color: red"></div>
   <input class="btn btn-success" type="submit" value="Добавить звезду">
   <a class="btn btn-danger" href="/star/">Назад</a>
 </form>
