--- a/src/main/resources/templates/system/update.html
+++ b/src/main/resources/templates/system/update.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
@@ -8,21 +8,26 @@
 <body>
 <header th:insert="/fragments/header :: headerMain"></header>
 <h1>Редактировать систему</h1>
-<form method="post">
+<form method="post" th:object="${system}" th:action="${'/system/detail/{id}/upd'}">
     <label>Наименование системы</label>
-    <input th:value="${object.name}" class="form-control" type="text" name="name">
+    <input th:field="*{name}" class="form-control" type="text" name="name">
+    <div th:if="${#fields.hasErrors('name')}" th:errors="*{name}" style="color: red"></div>
     <br>
     <label>Масса системы</label>
-    <input th:value="${object.system_mass}" class="form-control" type="text" name="system_mass">
+    <input th:field="*{system_mass}" class="form-control" type="number" name="system_mass">
+    <div th:if="${#fields.hasErrors('system_mass')}" th:errors="*{system_mass}" style="color: red"></div>
     <br>
     <label>Количество звезд</label>
-    <input th:value="${object.total_stars}" class="form-control" type="number" name="total_stars">
+    <input th:field="*{total_stars}" class="form-control" type="number" name="total_stars">
+    <div th:if="${#fields.hasErrors('total_stars')}" th:errors="*{total_stars}" style="color: red"></div>
     <br>
     <label>Количество известных планет</label>
-    <input th:value="${object.total_known_planets}" class="form-control" type="number" name="total_known_planets">
+    <input th:field="*{total_known_planets}" class="form-control" type="number" name="total_known_planets">
+    <div th:if="${#fields.hasErrors('total_known_planets')}" th:errors="*{total_known_planets}" style="color: red"></div>
     <br>
     <label>Количество спутников</label>
-    <input th:value="${object.total_moons}" class="form-control" type="number" name="total_moons">
+    <input th:field="*{total_moons}" class="form-control" type="number" name="total_moons">
+    <div th:if="${#fields.hasErrors('total_moons')}" th:errors="*{total_moons}" style="color: red"></div>
     <input class="btn btn-success" type="submit" value="Редактировать систему">
     <a class="btn btn-danger" href="/system/">Назад</a>
 </form>
