--- a/src/main/resources/templates/home/home.html
+++ b/src/main/resources/templates/home/home.html
@@ -9,5 +9,6 @@
 <a href="/star/">Перейти к звездам</a>
 <a href="/galaxy/">Перейти к галактикам</a>
 <a href="/system/">Перейти к системам</a>
+<a href="/galaxyshutle/">Перейти к галактическим шатлам</a>
 </body>
 </html>
