--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -9,6 +9,7 @@
     <li><a href="/star/" class="nav-link px-2 link-dark">Список звезд</a></li>
     <li><a href="/galaxy/" class="nav-link px-2 link-dark">Список галактик</a></li>
     <li><a href="/system/" class="nav-link px-2 link-dark">Список систем</a></li>
+    <li><a href="/galaxyshutle/" class="nav-link px-2 link-dark">Список галактических шатлов</a></li>
   </ul>
 </div>
 </div>
