--- a/src/main/resources/templates/star/star-add.html
+++ b/src/main/resources/templates/star/star-add.html
@@ -18,6 +18,7 @@
       <li><a href="/star/" class="nav-link px-2 link-dark">Список звезд</a></li>
       <li><a href="/galaxy/" class="nav-link px-2 link-dark">Список галактик</a></li>
       <li><a href="/system/" class="nav-link px-2 link-dark">Список систем</a></li>
+      <li><a href="/galaxyshutle/" class="nav-link px-2 link-dark">Список галактических шатлов</a></li>
     </ul>
   </div>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
@@ -36,6 +37,12 @@
   <label>Люмен</label>
   <input th:field="*{lumen}" class="form-control" type="number" name="lumen">
   <div th:if="${#fields.hasErrors('lumen')}" th:errors="*{lumen}" style="color: red"></div>
+  <br>
+  <label>Система</label>
+  <select th:field="*{system}">
+    <option th:each="element : ${systems}" th:text="${element.name}" th:value="${element.UID}"></option>
+  </select>
+  <br>
   <input class="btn btn-success" type="submit" value="Добавить звезду">
   <a class="btn btn-danger" href="/star/">Назад</a>
 </form>
