--- a/src/main/resources/templates/system/system-add.html
+++ b/src/main/resources/templates/system/system-add.html
@@ -18,6 +18,7 @@
       <li><a href="/star/" class="nav-link px-2 link-dark">Список звезд</a></li>
       <li><a href="/galaxy/" class="nav-link px-2 link-dark">Список галактик</a></li>
       <li><a href="/system/" class="nav-link px-2 link-dark">Список систем</a></li>
+      <li><a href="/galaxyshutle/" class="nav-link px-2 link-dark">Список галактических шатлов</a></li>
     </ul>
   </div>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
@@ -44,6 +45,12 @@
   <label>Количество спутников</label>
   <input th:field="*{total_moons}" class="form-control" type="number" name="total_moons">
   <div th:if="${#fields.hasErrors('total_moons')}" th:errors="*{total_moons}" style="color: red"></div>
+  <br>
+  <label>Галактика</label>
+  <select th:field="*{galaxy}">
+    <option th:each="element : ${galaxies}" th:text="${element.name}" th:value="${element.UID}"></option>
+  </select>
+  <br>
   <input class="btn btn-success" type="submit" value="Добавить систему">
   <a class="btn btn-danger" href="/system/">Назад</a>
 </form>
