--- a/src/main/resources/templates/star/info.html
+++ b/src/main/resources/templates/star/info.html
@@ -17,7 +17,9 @@
 <div class="container">
   <h2 th:text="'Класс звезды: ' + ${one_star.getClass_star()}"></h2>
   <p th:text="'Светимость ' + ${one_star.lumen} + ' люмен'"></p>
-  <p th:text="'Система: ' + ${one_star.system.name}"></p>
+  <div th:each="sys : ${one_star.system}">
+    <p th:text="'Система: ' + ${sys.name}"></p>
+  </div>
 </div>
   <a th:href="'/star/detail/' + ${one_star.UID} + '/upd'" class="btn btn-warning">Редактировать</a>
   <form th:action="'/star/detail/' + ${one_star.UID} + '/del'" method="get">
