--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -10,6 +10,11 @@
     <li><a href="/galaxy/" class="nav-link px-2 link-dark">Список галактик</a></li>
     <li><a href="/system/" class="nav-link px-2 link-dark">Список систем</a></li>
     <li><a href="/galaxyshutle/" class="nav-link px-2 link-dark">Список галактических шатлов</a></li>
+    <li>
+      <form th:action="@{/logout}" method="post">
+        <input type="submit" class="btn btn-danger" value="Выход"/>
+      </form>
+    </li>
   </ul>
 </div>
 </div>
