--- a/src/main/resources/templates/galaxy/update.html
+++ b/src/main/resources/templates/galaxy/update.html
@@ -8,7 +8,7 @@
 <body>
 <header th:insert="/fragments/header :: headerMain"></header>
 <h1>Редактировать галактику</h1>
-<form method="post" th:object="${galaxy}" th:action="${'/galaxy/detail/{id}/upd'}" >
+<form method="post" th:object="${galaxy}" th:action="'/galaxy/detail/' + *{getUID()} + '/upd'" >
     <label>Наименование галактики</label>
     <input th:field="*{name}" class="form-control" type="text" name="name">
     <div th:if="${#fields.hasErrors('name')}" th:errors="*{name}" style="color: red"></div>
