--- a/src/main/resources/templates/star/update.html
+++ b/src/main/resources/templates/star/update.html
@@ -8,7 +8,7 @@
 <body>
 <header th:insert="/fragments/header :: headerMain"></header>
 <h1>Редактировать звезду</h1>
-<form method="post" th:object="${star}" th:action="${'/star/detail/{id}/upd'}">
+<form method="post" th:object="${star}" th:action="'/star/detail/' + *{getUID()} + '/upd'">
   <label>Наименование звезды</label>
   <input th:field="*{name}" class="form-control" type="text" name="name">
   <div th:if="${#fields.hasErrors('name')}" th:errors="*{name}" style="color: red"></div>
@@ -21,9 +21,11 @@
   <input th:field="*{lumen}" class="form-control" type="number" name="lumen">
   <div th:if="${#fields.hasErrors('lumen')}" th:errors="*{lumen}" style="color: red"></div>
   <br>
+  <label>Система</label>
   <select th:field="*{system}">
     <option th:each="element : ${systems}" th:text="${element.name}" th:value="${element.UID}"></option>
   </select>
+  <br>
   <input class="btn btn-success" type="submit" value="Редактировать звезду">
   <a class="btn btn-danger" href="/star/">Назад</a>
 </form>
