--- a/src/main/resources/templates/system/update.html
+++ b/src/main/resources/templates/system/update.html
@@ -8,7 +8,7 @@
 <body>
 <header th:insert="/fragments/header :: headerMain"></header>
 <h1>Редактировать систему</h1>
-<form method="post" th:object="${system}" th:action="${'/system/detail/{id}/upd'}">
+<form method="post" th:object="${system}" th:action="'/system/detail/' + *{getUID()} + '/upd'">
     <label>Наименование системы</label>
     <input th:field="*{name}" class="form-control" type="text" name="name">
     <div th:if="${#fields.hasErrors('name')}" th:errors="*{name}" style="color: red"></div>
