--- a/src/main/resources/templates/system/system.html
+++ b/src/main/resources/templates/system/system.html
@@ -8,27 +8,10 @@
       border: solid black;
     }
   </style>
-  <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
-    <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-dark text-decoration-none">
-      <svg class="bi me-2" width="40" height="32" role="img" aria-label="Bootstrap"><use xlink:href="#bootstrap"></use></svg>
-    </a>
-
-    <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-      <li><a href="/home/" class="nav-link px-2 link-secondary">Домашняя страница</a></li>
-      <li><a href="/star/" class="nav-link px-2 link-dark">Список звезд</a></li>
-      <li><a href="/galaxy/" class="nav-link px-2 link-dark">Список галактик</a></li>
-      <li><a href="/system/" class="nav-link px-2 link-dark">Список систем</a></li>
-      <li><a href="/galaxyshutle/" class="nav-link px-2 link-dark">Список галактических шатлов</a></li>
-      <li>
-        <form th:action="@{/logout}" method="post">
-          <input type="submit" class="btn btn-danger" value="Выход"/>
-        </form>
-      </li>
-    </ul>
-  </div>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
 </head>
 <body>
+<header th:insert="/fragments/header :: headerMain"></header>
 <h1>Системы</h1>
 <div>
   <form method="get" action="/system/filter/">
