--- a/src/main/resources/templates/check/info.html
+++ b/src/main/resources/templates/check/info.html
@@ -28,7 +28,7 @@
     <form th:action="'/check/detail/' + ${one_check.UID} + '/del'" method="get">
         <button type="submit" class="btn btn-danger">Удалить</button>
     </form>
-    <a href="/star/" class="btn btn-success">Назад</a>
+    <a href="/check/" class="btn btn-success">Назад</a>
 </div>
 </body>
 </html>
