--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -2,21 +2,36 @@
 <html lang="en">
 <head>
     <title>Авторизация</title>
+    <link href="signin.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
 </head>
-<body>
-<div th:if="${param.error}">
-    Неверный логин и/или пароль.
-</div>
-<div th:if="${param.logout}">
-    Вы вышли из системы.
-</div>
-<form th:action="@{/login}" method="post">
-    <div><label> Логин : <input type="text" class="form-control" name="username"/> </label></div>
-    <div><label> Пароль : <input type="password" class="form-control" name="password"/> </label></div>
-    <br>
-    <div><input type="submit" class="btn btn-success" value="Вход"/></div>
-</form>
-<a href="/registration" class="btn btn-info">Регистрация</a>
+<body class="text-center">
+<main class="form-signin w-100 m-auto">
+    <form>
+        <h1 class="h3 mb-3 fw-normal">Вход в систему</h1>
+        <div th:if="${param.error}">
+            Неверный логин и/или пароль.
+        </div>
+        <div th:if="${param.logout}">
+            Вы вышли из системы.
+        </div>
+        <form th:action="@{/login}" method="post">
+            <div class="form-floating">
+                <input type="text" class="form-control" name="username" id="floatingInput" placeholder="username@example"/>
+                <label for="floatingInput">Логин</label>
+            </div>
+            <div class="form-floating">
+                <input type="password" class="form-control" name="password" id="floatingPassword" placeholder="password@example"/>
+                <label for="floatingPassword">Пароль</label>
+            </div>
+            <br>
+            <div>
+                <input type="submit" class="btn btn-success" value="Вход"/>
+            </div>
+            <br>
+            <a href="/registration" class="btn btn-info">Регистрация</a>
+        </form>
+    </form>
+</main>
 </body>
 </html>
